<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="movie">Popular Movies</string>
    <string name="stock">Stock Hawk</string>
    <string name="build">Build it Builder</string>
    <string name="material">Make Your App Material</string>
    <string name="ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>
</resources>
