<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.joe.project0.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:fontFamily="sans-serif"
        android:textSize="10pt"
        android:textColor="#000000"
        android:id="@+id/textView" />

    <Button
        style="@style/Padding"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:text="@string/movie"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:id="@+id/button_movie" />

    <Button
        style="@style/Padding"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:text="@string/stock"
        android:layout_below="@+id/button_movie"
        android:layout_centerHorizontal="true"
        android:id="@+id/button_stock"/>

    <Button
        style="@style/Padding"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:text="@string/build"
        android:layout_below="@+id/button_stock"
        android:layout_centerHorizontal="true"
        android:id="@+id/button_build"/>

    <Button
        style="@style/Padding"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:text="@string/material"
        android:layout_below="@+id/button_build"
        android:layout_centerHorizontal="true"
        android:id="@+id/button_material"/>

    <Button
        style="@style/Padding"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:text="@string/ubiquitous"
        android:layout_below="@+id/button_material"
        android:layout_centerHorizontal="true"
        android:id="@+id/button_ubiquitous"/>

    <Button
        style="@style/Padding"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:layout_below="@+id/button_ubiquitous"
        android:layout_centerHorizontal="true"
        android:id="@+id/button_capstone"/>


</RelativeLayout>
